*** empty log message ***
git-svn-id: http://svn.eclipsetrader.org/svnroot/eclipsetrader/trunk@295 a8e5a36e-6fb8-47cc-9500-2d10918a294f

--- a/net.sourceforge.eclipsetrader.help/guide/indicators.html
+++ b/net.sourceforge.eclipsetrader.help/guide/indicators.html
@@ -10,37 +10,30 @@
 <H1>Technical Analisys Indicators</H1>
 <p>
 The historical and intraday chart windows are capable to draw, in addition to the
-price and volume chart, a number of technical analisys indicators. Right-clicking on
-the chart and selecting the <b>Add</b> and <b>Modify</b> items it will be possible to
-add or modify the indicators drawn.</p>
+price and volume chart, a number of technical analisys indicators. Right-click on
+the chart and select the <b>Add</b> item to start the Add Indicator wizard, or
+click on the <b>Modify</b> item to change the parameters of the currently selected
+indicator.</p>
 
 <p align="left">
 <img src="images/chart_indicators.gif"></p>
 
 <p>
-Each indicator has a specific set of parameters. By selecting an indicator a
-dialog will be shown that allows the customization of the specific parameter
+Each indicator has a specific set of parameters. By selecting an indicator and
+clicking on the next button it is possible to customize the indicator parameters
 as is needed.</p>
 
 <p align="left">
 <img src="images/chart_indicators_parameters.gif"></p>
 
-<p><b>Name</b><br>
-Name that will be assigned to the indicator on the chart.</p>
+<p>
+Clicking on the next button it is possible to select where the new indicator
+will be placed. Available options are: above the selected zone, on the selected
+zone and below the selected zone (default). The selected zone is the chart portion
+that is hilighted with a red vertical bar.</p>
 
-<p><b>Selected Periods</b> and <b>Moving Average Periods</b><br>
-These are parameters specific to the selected Stochastic indicator. Other
-indicators will show other parameters in this position. Refer to the indicator's
-documentation to know the meaning and how to use the parameters for the
-technical analisys.</p>
-
-<p><b>Color</b><br>
-Color used to draw the indicator.</p>
-
-<p><b>Insert indicator</b><br>
-Allow to insert the new indicator on the selected chart zone (<b>On the selected 
-zone</b>) or on a new zone (<b>On a new zone</b>). The selected zone is the one over
-which the mouse button was pressed.</p>
+<p align="left">
+<img src="images/chart_indicators_zone.gif"></p>
 
 <p>
 To learn more about technical indicators and how to use them, visit the following 
