--- a/net.sourceforge.eclipsetrader.help/tasks/tasks-35.htm
+++ b/net.sourceforge.eclipsetrader.help/tasks/tasks-35.htm
@@ -2,9 +2,9 @@
 <HTML>
 <HEAD><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <!-- default platform documentation stylesheets -->
-<style>@import url("book.css");</style>
+<style>@import url("../guide/book.css");</style>
 <!-- default schema documentation stylesheets -->
-<style>@import url("schema.css");</style>
+<style>@import url("../guide/schema.css");</style>
 </HEAD>
 <BODY>
 <H1>Configuration operations: enable, disable, or uninstall a feature</H1>
