--- a/net.sourceforge.eclipsetrader.help/guide/account01.html
+++ b/net.sourceforge.eclipsetrader.help/guide/account01.html
@@ -13,26 +13,28 @@
 
 <ol>
   <li>On the main menu bar, click <b>File &gt; New &gt; Account</b>. The New Account wizard opens.</li>
-  
   <li>In the <b>Name</b> field, type the name of the new account.</li>
-  
   <li>Select the currency.</li>
-  
   <li>In the <b>Initial Balance</b> field, type the initial amount available for the transactions.</li>
-
   <li>Click <b>Next</b>.</li>
-  
   <li>In the <b>Fixed</b> field, type the fixed commissions to pay for each transaction.</li>
-  
   <li>In the <b>Variable</b> field, type the commissions percentage to pay for each transaction.</li>
-  
   <li>In the <b>Minimum</b> field, type the minimum commissions amount to pay for each transaction.</li>
-  
   <li>In the <b>Maximum</b> field, type the maximum commissions amount to pay for each transaction.
   Zero means no limit.</li>
-
   <li>Click <b>Finish</b>. The new account is listed in the accounts view.</li>
 </ol>
+
+<p>The accounts can be organized into groups. To create a group:</p>
+
+<ol>
+  <li>Right-click on the accounts view.</li>
+  <li>From the pop-up menu, select <b>New Group</b>.</li>
+  <li>Type the name of new group.</li>
+  <li>Click <b>OK</b>. The group is listed in the accounts view.</li>
+</ol>
+
+<p>Drag and drop the accounts from one group to another to change the hierarchy.</p>
 
 <br>
 <p><img src="cpy.gif"></p>
