--- a/net.sourceforge.eclipsetrader.help/guide/security01.html
+++ b/net.sourceforge.eclipsetrader.help/guide/security01.html
@@ -23,7 +23,7 @@
 
   <li>Select the sources that are providing the realtime quotes and (optional) level II
   view for the new security.</li>
-  <li>If available, Select the <b>Exchange</b> name.
+  <li>If available, select the <b>Exchange</b> name.
   <li>In the <b>Symbol</b> fields, type the symbol used by the data provider to identify
   the security. If these fields are left blank, the <b>Code</b> field from the previous page
   is used.</li>
