--- a/net.sourceforge.eclipsetrader.help/guide/alert01.html
+++ b/net.sourceforge.eclipsetrader.help/guide/alert01.html
@@ -15,9 +15,10 @@
 
 <ul>
 	<li><b>Interval:</b> the bars interval to check.
-	<li><b>Moving Average Tyoe:</b> the moving average type.
+	<li><b>Moving Average Type:</b> the moving average type.
 	<li><b>Period:</b> the moving average period.
 	<li><b>Direction:</b> the price cross direction.
+	<li><b>Hilight Color:</b> the color to use to hilight the watchlist row.
 </ul>
 
 <br>
