--- a/net.sourceforge.eclipsetrader.help/guide/security03.html
+++ b/net.sourceforge.eclipsetrader.help/guide/security03.html
@@ -18,6 +18,8 @@
 
 <p>The security wizard dialog opens.</p>
 
+<p><em>Tip:</em> You can achieve the same result by selecting <b>Properties</b> from the <b>File</b> menu.</p>
+
 <h3>Related tasks</h3>
 
 <ul>
