--- a/net.sourceforge.eclipsetrader.help/guide/watchlist02.html
+++ b/net.sourceforge.eclipsetrader.help/guide/watchlist02.html
@@ -12,27 +12,30 @@
 <p>To create an alert:</p>
 
 <ol>
-	<li>Right-click on the security.</li>
+	<li>Right-click on the watchlist row.</li>
 	<li>From the pop-up menu, select <b>New Alert</b>. The New Alert wizard opens.</li>
 	<li>Select the <b>Alert</b> type that you want to create.</li>
 	<li>Click <b>Next</b>.
 	<li>Set the parameters specific to the selected alert type.</li>
+	<li>Click <b>Next</b>.
+	<li>Select the actions to perform when the alert is activated.</li>
 	<li>Click <b>Finish</b>.</li>
 </ol>
 
 <p>The alert is added to the selected watchlist item.</p>
 
 <p>The alerts are checked whenever there is an update in the security's quote. The alert's
-match is signaled in the events view. To open the events view, on the main menu bar, click
+match is signaled in the events view and, accordingly with the selected actions, with a pop-up
+dialog and an hilight of the watchlist's row. To open the events view, on the main menu bar, click
 <b>Window &gt; Show View &gt; Events</b>.</p>
 
 <p>To edit an alert:</p>
 
 <ol>
-	<li>On the view's tools bar, open the pull-down menu and click <b>Settings</b>.</li>
-	<li>Expand the <b>Securities</b> page.</li>
-	<li>Select the security.</li>
-	<li>Select the alert from the alerts table.</li>
+	<li>Right-click on the watchlist row.</li>
+	<li>From the pop-up menu, select <b>Properties</b>.</li>
+	<li>Select the <b>Alerts</b> page.</li>
+	<li>Select the alert to edit from the alerts table.</li>
 	<li>Change the parameters.</li>
 	<li>Click <b>OK</b>.</li>
 </ol>
