--- a/net.sourceforge.eclipsetrader.help/guide/security01.html
+++ b/net.sourceforge.eclipsetrader.help/guide/security01.html
@@ -17,25 +17,34 @@
   <li>In the <b>Code</b> field, type the unique code for the security, 
   In the <b>Description</b> field, type a description for your new
     security (the company's name for example), and 
-  select the currency.</li>
+  select the (optional) currency.</li>
 
   <li>Click <b>Next</b> to setup the realtime quote feeds.</li>
 
-  <li>Select the sources that are providing the realtime quotes and (optional) level II
-  view for the new security.</li>
+  <li>Select the source that provides the realtime quotes for the new security.</li>
   <li>If available, select the <b>Exchange</b> name.
-  <li>In the <b>Symbol</b> fields, type the symbol used by the data provider to identify
-  the security. If these fields are left blank, the <b>Code</b> field from the previous page
-  is used.</li>
-
-  <li>(Optional) Click <b>Next</b> to setup the historical chart feed.</li>
-
-  <li>Select the sources that are providing the historical chart
-  data for the new security.</li>
-  <li>If available, Select the <b>Exchange</b> name.
   <li>In the <b>Symbol</b> fields, type the symbol used by the data provider to identify
   the security. If these fields are left blank, the <b>Code</b> field from the first page
   is used.</li>
+
+  <li>(Optional) Click <b>Next</b> to setup the level II quote feeds.</li>
+
+  <li>Select the source that provides the level II
+  view for the new security.</li>
+
+  <li>(Optional) Click <b>Next</b> to setup the historical chart feed.</li>
+
+  <li>Select the source that provides the historical chart data for the new security.</li>
+
+  <li>(Optional) Click <b>Next</b> to setup the intraday chart build options.</li>
+  
+  <li>Select <b>Enable automatic build</b> if you want that EclipseTrader builds the intradat
+  charts automatically while downloading the realtime quotes. If disabled, the intraday charts are 
+  provided by the historical charts data source, if available.</li>
+  
+  <li>Set the begin and end time, and the days of the week to collect the data.</li>
+  
+  <li>Set how many days you want to keep in the intraday charts in the <b>Keep (days)</b> field.</li>
 
   <li>Click <b>Finish</b>. The new security is listed in the securities view.</li>
 </ol>
