--- a/net.sourceforge.eclipsetrader.help/guide/watchlist03.html
+++ b/net.sourceforge.eclipsetrader.help/guide/watchlist03.html
@@ -13,10 +13,14 @@
 
 <ol>
 	<li>On the view's tools bar, open the pull-down menu and click <b>Search Pattern</b>.</li>
-	<li>Select the <b>Period</b> (daily, weekly, monthly) to search.</li>
 	<li>Select the <b>Pattern</b> to search, or <b>All</b> to seach all available patterns.</li>
+	<li>Select the <b>Begin</b> and <b>End</b> dates to search, or leave the fields blank to
+	search all available dates.</li>
+	<li>Select the <b>Period</b> (daily, weekly, monthly) to search.</li>
 	<li>Select the number of <b>Bars</b>.
 	<li>Select <b>Bullish Only</b> if you want to seach only bullish patterns.</li>
+	<li>Select <b>Search all occurrences</b> if you want to seach all occurrences within the selected
+	historical data. If unselected, only the last occurrence is searched.</li>
 	<li>Click <b>OK</b>.</li>
 </ol>
 
