--- a/net.sourceforge.eclipsetrader.help/guide/charts.html
+++ b/net.sourceforge.eclipsetrader.help/guide/charts.html
@@ -21,5 +21,9 @@ price trends.</p>
 <p>Indicators can be added over existing indicators, on a new tab in the same row with
 other indicators or alone in a row.</p>
 
+<br>
+<p><img src="cpy.gif"></p>
+<p></p>
+
 </BODY>
 </HTML>
