--- a/net.sourceforge.eclipsetrader.help/guide/news.html
+++ b/net.sourceforge.eclipsetrader.help/guide/news.html
@@ -18,5 +18,9 @@ integrated web browser.</p>
 <p>You can open multiple news views that shows either all the available headers or the
 headers related to a single security.</p>
 
+<br>
+<p><img src="cpy.gif"></p>
+<p></p>
+
 </BODY>
 </HTML>
