--- a/net.sourceforge.eclipsetrader.help/guide/patterns.html
+++ b/net.sourceforge.eclipsetrader.help/guide/patterns.html
@@ -15,5 +15,9 @@ search results.</p>
 
 <p align="left"><img src="patterns.gif"></p>
 
+<br>
+<p><img src="cpy.gif"></p>
+<p></p>
+
 </BODY>
 </HTML>
