--- a/net.sourceforge.eclipsetrader.help/guide/portfolio.html
+++ b/net.sourceforge.eclipsetrader.help/guide/portfolio.html
@@ -14,5 +14,9 @@ trading accounts.</p>
 
 <p align="left"><img src="portfolio.gif"></p>
 
+<br>
+<p><img src="cpy.gif"></p>
+<p></p>
+
 </BODY>
 </HTML>
