--- a/net.sourceforge.eclipsetrader.help/guide/securities.html
+++ b/net.sourceforge.eclipsetrader.help/guide/securities.html
@@ -18,5 +18,11 @@ views.</p>
 <p>Right-click on any security in the view to open a pop-up menu that allows you to perform
 operations such as open the historical chart or view the news headers.</p>
 
+<p>Click on the column headers to sort the list.</p>
+
+<br>
+<p><img src="cpy.gif"></p>
+<p></p>
+
 </BODY>
 </HTML>
