--- a/net.sourceforge.eclipsetrader.help/guide/watchlist.html
+++ b/net.sourceforge.eclipsetrader.help/guide/watchlist.html
@@ -27,5 +27,9 @@ reorder the list.</p>
 you to perform various operations on the security, such as opening the level II data
 view or the historical chart. The pop-up menu is not available in the ribbon view.</p>
 
+<br>
+<p><img src="cpy.gif"></p>
+<p></p>
+
 </BODY>
 </HTML>
