--- a/net.sourceforge.eclipsetrader.help/guide/watchlist05.html
+++ b/net.sourceforge.eclipsetrader.help/guide/watchlist05.html
@@ -19,6 +19,9 @@
 	<li>Click <b>OK</b>.</li>
 </ol>
 
+<p><em>Tip:</em> Click on the column headers to automatically sort the list. Each click toggles
+between ascendent sort, descendent sort and unsorted.</p>
+
 <br>
 <p><img src="cpy.gif"></p>
 <p></p>
