--- a/net.sourceforge.eclipsetrader.help/guide/indicators/adaptstoch.html
+++ b/net.sourceforge.eclipsetrader.help/guide/indicators/adaptstoch.html
@@ -7,30 +7,20 @@
 <style>@import url("../schema.css");</style>
 </HEAD>
 <BODY>
-<H1>Moving Average - MA</H1>
+<H1>Adaptive Stochastic - AdaptSTOCH</H1>
 <p>
 
 <p>
 </p>
 
 <p align="left">
-<img src="ma.gif"></p>
+<img src="adaptstoch.gif"></p>
 
 <p><b>Parameters</b></p> 
 
 <ul>
-  <li>Label: The text that identifies the indicator</li>
+  <li>Name: The text that identifies the indicator</li>
   <li>Color: Indicator's color</li>
-  <li>Input: The input data field use</li>
-  <li>Period: The period to use</li>
-  <li>Type: The type of MA method to use:
-    <ul>
-      <li>SIMPLE</li>
-      <li>EXPONENTIAL</li>
-      <li>WEIGHTED</li>
-      <li>WILLIAM'S</li>
-    </ul>
-  </li>
 </ul>
 
 <br>
