--- a/net.sourceforge.eclipsetrader.help/guide/indicators/atr.html
+++ b/net.sourceforge.eclipsetrader.help/guide/indicators/atr.html
@@ -28,8 +28,8 @@ from the previous bar's close or the current bar's open.</p>
 <p><b>Parameters</b></p> 
 
 <ul>
-	<li>Name: The text that identifies the indicator</li>
 	<li>Color: Indicator's color</li>
+	<li>Label: The text that identifies the indicator</li>
 	<li>Smoothing Period: The period used for the Moving Average</li>
 	<li>Smoothing Average Type: The type of Moving Average to use</li>
 </ul>
