--- a/net.sourceforge.eclipsetrader.help/guide/indicators/ad.html
+++ b/net.sourceforge.eclipsetrader.help/guide/indicators/ad.html
@@ -26,8 +26,8 @@ volume is associated with downward price movement.
 <p><b>Parameters</b></p> 
 
 <ul>
-  <li>Name: The text that identifies the indicator</li>
   <li>Color: Indicator's color</li>
+  <li>Label: The text that identifies the indicator</li>
   <li>Method to use: The type of AD method to use:
     <ul>
       <li>STANDARD - Standard version</li>
