--- a/org.eclipsetrader.platform.doc.user/guide/charts.html
+++ b/org.eclipsetrader.platform.doc.user/guide/charts.html
@@ -12,7 +12,7 @@
 <p>Chart views provides a graphical representation of the historical prices for a given
 security.</p>
 
-<p align="left"><img src="chart.gif"></p>
+<p align="left"><img src="charts.png"></p>
 
 <p>Use the right-click pop-up menu or the view's pull-down menu to add indicators and
 drawing objects to the chart that helps you to perform the technical analisys of the
@@ -20,10 +20,6 @@ price trends.</p>
 
 <p>Indicators can be added over existing indicators, on a new tab in the same row with
 other indicators or alone in a row.</p>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
 
 </BODY>
 </HTML>
