--- a/org.eclipsetrader.platform.doc.user/guide/news.html
+++ b/org.eclipsetrader.platform.doc.user/guide/news.html
@@ -7,20 +7,16 @@
 <style>@import url("schema.css");</style>
 </HEAD>
 <BODY>
-<H1>News</H1>
+<H1>News Headlines</H1>
 <p>
 
-<p>The news view provides a list of news headers. The news can then be readed using the
+<p>The headlines view provides a list of news headers. The news can then be readed using the
 integrated web browser.</p>
 
-<p align="left"><img src="news.gif"></p>
+<p align="left"><img src="headlines.png"></p>
 
 <p>You can open multiple news views that shows either all the available headers or the
 headers related to a single security.</p>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
 
 </BODY>
 </HTML>
