--- a/org.eclipsetrader.platform.doc.user/guide/securities.html
+++ b/org.eclipsetrader.platform.doc.user/guide/securities.html
@@ -7,22 +7,16 @@
 <style>@import url("schema.css");</style>
 </HEAD>
 <BODY>
-<H1>Securities</H1>
+<H1>Navigator</H1>
 
-<p>The securities view provides a list of all available securities. From here you can open
+<p>The navigator view provides a list of all available securities. From here you can open
 charts and news headers specific to each security, and drag a security to populate other
 views.</p>
 
-<p align="left"><img src="securities.gif"></p>
+<p align="left"><img src="navigator.png"></p>
 
 <p>Right-click on any security in the view to open a pop-up menu that allows you to perform
 operations such as open the historical chart or view the news headers.</p>
-
-<p>Click on the column headers to sort the list.</p>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
 
 </BODY>
 </HTML>
