--- a/org.eclipsetrader.platform.doc.user/guide/security02.html
+++ b/org.eclipsetrader.platform.doc.user/guide/security02.html
@@ -14,27 +14,19 @@
 <ol>
   <li>On the main menu bar, click <b>File &gt; New &gt; Watchlist</b>. The New Watchlist 
     wizard opens.</li>
-  <li>In the <b>Name</b> field, type the name of your new
-    watchlist, and select the (optional) currency.</li>
+  <li>In the <b>Name</b> field, type the name of your new watchlist.</li>
 
   <li>Click <b>Next</b>. Select the columns to show in the watchlist. Reorder the columns
   using the up and down buttons next to the <b>Shown columns</b> list.</li>
 
-  <li>(Optional) Click <b>Next</b>. Select the securities to show in the watchlists.
-   Reorder the securities using the up and down buttons next to the <b>Shown securities</b> list</li>
-
   <li>Click <b>Finish</b>.</li>
 </ol>
 
-<p>The watchlist opens in the workbench. To open an existing watchlist, on the main menu bar,
-click <b>Window &gt; Open Watchlist &gt; the name of the watchlist to open</b>.</p>
+<p>The watchlist opens in the workbench. To open an existing watchlist, open the <b>Navigator</b> view, expand
+the <b>Watchlist</b> folder and double click on the name of the watchlist to open.</p>
 
-<p>The securities can be added to the watchlist by dragging the security from the securities
-view to the watchlist.</p>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
+<p>The securities can be added to the watchlist by dragging the security from the navigator
+view.</p>
 
 </BODY>
 </HTML>
