--- a/org.eclipsetrader.platform.doc.user/guide/trading.html
+++ b/org.eclipsetrader.platform.doc.user/guide/trading.html
@@ -11,15 +11,11 @@
 
 <p>The trading feature allows you to submit orders to a broker using an order form:</p>
 
-<p align="left"><img src="orderform.gif"></p>
+<p align="left"><img src="order-dialog.png"></p>
 
-<p>And keep track of the submitted orders and theyr status using the orders view:</p>
+<p>And keep track of the submitted orders and status using the orders view:</p>
 
-<p align="left"><img src="ordersview.gif"></p>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
+<p align="left"><img src="orders.png"></p>
 
 </BODY>
 </HTML>
