--- a/org.eclipsetrader.platform.doc.user/guide/watchlist.html
+++ b/org.eclipsetrader.platform.doc.user/guide/watchlist.html
@@ -11,25 +11,19 @@
 
 <p>The watchlist view allows you to keep track of the price trend of the securities.</p>
 
-<p align="left"><img src="watchlist.gif"></p>
+<p align="left"><img src="watchlist.png"></p>
 
 <p>Create a watchlist using the <b>File -> New -> Watchlist</b> menu. The watchlist
 wizard allows you to define the name of the watchlist and the columns to display.
-To add the securities to a watchlist drag a security from the securities view and drop
-it to the watchlist. The security will be added at the end of list. Use the <b>Settings</b> menu to
-reorder the list.</p>
+To add securities to a watchlist drag a security from the navigator view and drop
+it to the watchlist.</p>
 
-<p>Watchlists can layout the securities using a table view or a ribbon view.</p>
+<p>A specialized tickers view is suitable to display indexes.</p>
 
-<p align="left"><img src="ribbon.gif"></p>
+<p align="left"><img src="tickers.png"></p>
 
-<p>Right click on a security in the table view to open a pop-up menu that allows
-you to perform various operations on the security, such as opening the level II data
-view or the historical chart. The pop-up menu is not available in the ribbon view.</p>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
+<p>Open the view the <b>Window -> Show View -> Tickers</b> menu. To add securities to the tickers view drag a 
+security from the navigator view and drop it to the view.</p>
 
 </BODY>
 </HTML>
