--- a/org.eclipsetrader.platform.doc.user/guide/watchlist02.html
+++ b/org.eclipsetrader.platform.doc.user/guide/watchlist02.html
@@ -12,22 +12,18 @@
 <p>To create an alert:</p>
 
 <ol>
-	<li>Right-click on the watchlist row.</li>
-	<li>From the pop-up menu, select <b>New Alert</b>. The New Alert wizard opens.</li>
-	<li>Select the <b>Alert</b> type that you want to create.</li>
-	<li>Click <b>Next</b>.
-	<li>Set the parameters specific to the selected alert type.</li>
-	<li>Click <b>Next</b>.
-	<li>Select the actions to perform when the alert is activated.</li>
-	<li>Click <b>Finish</b>.</li>
+	<li>Right-click on a watchlist row.</li>
+	<li>From the pop-up menu, select <b>Properties</b>.
+	<li>Select the <b>Alerts</b> page.</li>
+	<li>Click on the bell icon, the new alert wizard opens.</li>
+	<li>Select the alert to add and fill the wizard pages.</li>
+	<li>Click <b>Finish</b> the new alert is added to the list. Click <b>Ok</b> to exit the properties dialog.</li>
 </ol>
 
-<p>The alert is added to the selected watchlist item.</p>
+<p>The alert is added to the selected security.</p>
 
 <p>The alerts are checked whenever there is an update in the security's quote. The alert's
-match is signaled in the events view and, accordingly with the selected actions, with a pop-up
-dialog and an hilight of the watchlist's row. To open the events view, on the main menu bar, click
-<b>Window &gt; Show View &gt; Events</b>.</p>
+match is signaled with a pop-up dialog and an highlight of the watchlist's row..</p>
 
 <p>To edit an alert:</p>
 
@@ -40,9 +36,6 @@ dialog and an hilight of the watchlist's row. To open the events view, on the ma
 	<li>Click <b>OK</b>.</li>
 </ol>
 
-<p>The alerts table shows a short description of the alert and the date and time when the
-last match was found.</p>
-
 <h3>Related references</h3>
 
 <ul>
@@ -51,10 +44,6 @@ last match was found.</p>
 	<li><a href="alert03.html">Price Change (%)</a></li>
 	<li><a href="alert04.html">Target Price</a></li>
 </ul>
-
-<br>
-<p><img src="cpy.gif"></p>
-<p></p>
 
 </BODY>
 </HTML>
