--- a/org.eclipsetrader.tests-feature/license.html
+++ b/org.eclipsetrader.tests-feature/license.html
@@ -74,6 +74,6 @@ contact EclipseTrader.org to determine what terms and conditions govern that par
    another country, of encryption software. BEFORE using any encryption software, please check the country's laws, regulations and policies concerning the import,
    possession, or use, and re-export of encryption software, to see if this is permitted.</p>
    
-<small>Java and all Java-based trademarks are trademarks of Sun Microsystems, Inc. in the United States, other countries, or both.</small>   
+<small>Java and all Java-based trademarks are trademarks of Oracle Corporation in the United States, other countries, or both.</small>   
 </body>
 </html>
